@@ -37,10 +37,5 @@ override_dh_shlibdeps:
 override_dh_strip:
 	dh_strip --dbgsym-migration='gnome-shell-dbg (<< 3.20.2-2~)'
 
-ifeq ($(shell dpkg-vendor --query vendor),Ubuntu)
-override_dh_gencontrol:
-	dh_gencontrol -- -Vicon-theme:Depends=adwaita-icon-theme-full
-endif
-
 override_dh_auto_test:
 	xvfb-run dh_auto_test
